CompilerNetwork/User/0e984725-c51c-4bf4-9960-e1c80e27aba0/ERROR_0e984725-c51c-4bf4-9960-e1c80e27aba0_0e984725-c51c-4bf4-9960-e1c80e27aba1_e17f7fac-a905-408d-84a8-f4639b327973.txt
Code.cpp: In function 'int main()':
Code.cpp:7:5: error: 'cinn' was not declared in this scope
     cinn>>a>>b>>c;
     ^
Code.cpp:8:5: error: 'coutt' was not declared in this scope
     coutt<<a+b+c;
     ^
